Fix for minecraft 1.21.9

--- a/build.gradle
+++ b/build.gradle
@@ -55,10 +55,18 @@ dependencies {
 }
 
 processResources {
-    inputs.property "version", project.version
+    inputs.property "mod_version", project.mod_version
+    inputs.property "loader_version", project.loader_version
+    inputs.property "minecraft_version", project.minecraft_version
+    inputs.property "fabric_version", project.fabric_version
 
     filesMatching("fabric.mod.json") {
-        expand "version": inputs.properties.version
+         expand([
+            'mod_version': project.mod_version,
+            'loader_version': project.loader_version,
+            'minecraft_version': project.minecraft_version,
+            'fabric_version': project.fabric_version
+        ])
     }
 }
 
