Upgrade workflow files for GitLab flow branching strategy

--- a/.github/workflows/pushOnReleaseBranch.yml
+++ b/.github/workflows/pushOnReleaseBranch.yml
@@ -3,18 +3,17 @@
 # certain platforms or Java versions, and provides a first line of defense
 # against bad commits.
 
-name: Heater Release Workflow
+name: Build Release
 on:
   push:
-    tags:
-      - '*'
-
-permissions:
-  contents: write
+    branches:
+      - release/**
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -31,7 +30,6 @@ jobs:
       - name: Build
         run: |
           chmod +x ./gradlew
-          ./gradlew genSources
           ./gradlew clean build
 
       - name: Store Reports
@@ -42,15 +40,7 @@ jobs:
           path: |
             **/build/reports/
             **/build/test-results/
-      
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ github.ref_name }}
+
+      - name: Modrinth Deploy
         run: |
-          version=`grep minecraft_version gradle.properties | cut -d'=' -f2`
-          gh release create $tag ./build/libs/*.jar \
-              --draft --verify-tag \
-              --repo "$GITHUB_REPOSITORY" \
-              --title "Heater $tag for Minecraft $version" \
-              --notes "$(./CHANGELOG.sh)"
+          ./gradlew modrinth
