--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ minecraft_version=1.21.9
 game_versions=1.21.9,1.21.10,1.21.11
 loader_version=0.18.3
 loom_version=1.14-SNAPSHOT
+parchment_version=2025.10.05
 
 # Mod Properties
 mod_version=4.1+1.21.9
