--- a/.github/workflows/pushTagOnMain.yml
+++ b/.github/workflows/pushTagOnMain.yml
@@ -15,6 +15,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
