--- a/gradle.properties
+++ b/gradle.properties
@@ -5,18 +5,18 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.10
-game_versions=1.21.10,1.21.11
+minecraft_version=1.21
+game_versions=1.21,1.21.1,1.21.2,1.21.3,1.21.4,1.21.5,1.21.6,1.21.7,1.21.8,1.21.9,1.21.10,1.21.11
 loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
-parchment_version=2025.10.12
+parchment_version=2024.11.10
 
 # Mod Properties
-mod_version=4.1+1.21.9
+mod_version=4.1+1.21
 maven_group=niv.heater
 archives_base_name=heater
 project_id=g3jBz897
 
 # Dependencies
-fabric_version=0.138.4+1.21.10
-burning_version=3.0-SNAPSHOT
+fabric_version=0.102.0+1.21
+burning_version=3.0+1.21
