Remove deprecated code

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.9
-game_versions=1.21.9,1.21.10,1.21.11
-loader_version=0.18.3
+minecraft_version=1.21.10
+game_versions=1.21.10,1.21.11
+loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
-parchment_version=2025.10.05
+parchment_version=2025.10.12
 
 # Mod Properties
 mod_version=4.1+1.21.9
@@ -17,5 +17,5 @@ archives_base_name=heater
 project_id=g3jBz897
 
 # Dependencies
-fabric_version=0.134.1+1.21.9
-burning_version=2.0+1.21.6
+fabric_version=0.138.4+1.21.10
+burning_version=3.0-SNAPSHOT
