--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,9 @@ dependencies {
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    modImplementation "maven.modrinth:burning:${project.burning_version}"
+
+    // modImplementation "maven.modrinth:burning:${project.burning_version}"
+    modImplementation files("../burning/build/libs/burning-${project.burning_version}.jar")
 }
 
 processResources {
