Fix main burning version

--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,7 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    // modImplementation "maven.modrinth:burning:${project.burning_version}"
-    modImplementation files("../burning/build/libs/burning-${project.burning_version}.jar")
+    modImplementation files("../lib/burning-${project.burning_version}.jar")
 }
 
 processResources {
