--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 # Done to increase the memory available to gradle.
+org.gradle.daemon=false
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
@@ -18,4 +19,4 @@ project_id=g3jBz897
 
 # Dependencies
 fabric_version=0.138.4+1.21.10
-burning_version=3.0+1.21.4
+burning_version=3.0-SNAPSHOT
